--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -9,11 +9,12 @@
   <h1>Modifier mes créneaux de disponibilités</h1>
   <i class="fa-solid fa-paw float-end text-primary"></i>
 </div>
+
 <div class="d-flex flex-row justify-content-center align-items-center mb-4">
-  <p class="mx-4">Légendes : </p>
-  <div class="bg-info btn disabled border-0"> Rdv de prévus </div>
-  <div class="border border-1 border-primary px-2 py-1 text-primary mx-2"> Créneaux disponibles </div>
-  <div class="border border-1 border-dark px-2 py-1 text-dark"> Créneaux bloqués </div>
+  <p class="mx-4" style="font-size: 12px;">Légendes : </p>
+  <div class="bg-info btn disabled border-0" style="font-size: 12px;"> Rdv de prévus </div>
+  <div class="border border-1 border-primary px-2 py-1 text-primary mx-2" style="font-size: 12px;"> Créneaux disponibles </div>
+  <div class="border border-1 border-dark px-2 py-1 text-dark" style="font-size: 12px;"> Créneaux bloqués </div>
 </div>
 <%# body %>
 <div class="row d-flex flex-wrap justify-content-center">
