--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -86,7 +86,8 @@
       </div>
     </div>
     <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
-      <h5 class="text-center mb-4" style="text-decoration: underline">Les horaires d'ouvertures</h5>
+      <h5 class="text-center" style="text-decoration: underline">Les horaires d'ouvertures</h5>
+      <p class="mb-4 text-center"style="font-size: 10px">S'il y a une fermeture d'une demie-journée, veuillez laisser le champs des heures vides.</p>
       <table class="table table-bordered custom-white-table">
         <thead class="table-secondary">
           <tr>
