--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -5,14 +5,14 @@
   <% end %>
 </div>
 <%# body %>
-<div class="text-center m-4">
+<div class="text-center mb-4">
   <h1><%= @professional.name %></h1>
   <h3><%= @professional.specialty%></h3>
 </div>
 <div class="grid w-100" style="max-width: 100vw;">
   <div id="info-pro">
     <div style="margin: 8px;" class="text-center">
-      <%= image_tag(@professional.photo_url, crop: :fill, class:"rounded-4 mb-2", style:"width: 60%;")%>
+      <%= image_tag(@professional.photo_url, class:"rounded-4 mb-2", style:"width: 80%; aspect-ratio: 2; object-fit: cover")%>
     </div>
     <div class="d-flex flex-column justify-content-center" style="width: 100%;">
       <div class="card_pro">
@@ -35,14 +35,14 @@
                   <p><%=I18n.t('date.abbr_day_names', locale: :fr)[h.day_of_week]%></p>
                 </div>
                 <div class="col d-flex flex-column">
-                  <% if h.closed?%>
+                  <% if h.closed? || h.open_time_morning.nil? || h.close_time_morning.nil?%>
                     <p>Fermé</p>
                   <% else %>
                     <p><%=h.open_time_morning.strftime('%H:%M')%> - <%=h.close_time_morning.strftime('%H:%M')%></p>
                   <% end %>
                 </div>
                 <div class="col d-flex flex-column">
-                  <% if h.closed?%>
+                  <% if h.closed? || h.open_time_afternoon.nil? || h.close_time_afternoon.nil? %>
                     <p>Fermé</p>
                   <% else %>
                     <p><%=h.open_time_afternoon.strftime('%H:%M')%> - <%=h.close_time_afternoon.strftime('%H:%M')%></p>
@@ -65,7 +65,7 @@
   </div>
   <div>
     <%# map %>
-    <div class="map" style="height: 400px;  border-radius: 20px"
+    <div class="map " style="height: 100%;  border-radius: 20px; max-height: 55vh"
           data-controller="map"
           data-map-markers-value="<%= @marker.to_json %>"
           data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
