--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $pink;
+  background: white;
   position: sticky;
   top: 00px;
   z-index: 200;
+
 }
 
 .navbar-lewagon .navbar-collapse {
