--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -32,7 +32,7 @@
     </div>
   </div>
   <%# title %>
-  <h1 class="text-center my-4">🐾 Ils cherchent une nouvelle famille 🏠</h1>
+  <h1 class="text-center my-4">Ils cherchent une nouvelle famille</h1>
   <%# search bar %>
   <div class="row justify-content-center">
     <div class="col-sm-8 my-3">
@@ -57,7 +57,7 @@
                 data-animal-index-target="animal"
                 data-action="mouseover->animal-index#hover mouseout->animal-index#unhover">
             <!-- En-tête -->
-            <div class="p-3 text-center" style="border-radius: 8px 8px 0 0; background-color: #f7e6d4;">
+            <div class="p-3 text-center text-white" style="border-radius: 8px 8px 0 0; background-color: #55868C;">
               <%=animal.name %>
             </div>
             <!-- Image qui prend le reste de la place -->
