correction du design + creation de model blog

--- a/app/assets/stylesheets/components/_btn_custom.scss
+++ b/app/assets/stylesheets/components/_btn_custom.scss
@@ -1,6 +1,6 @@
 .btn_custom {
   background-color: $pink;
-  color: white;
+  color: black;
   border-radius: 16px;
   padding: 10px 20px;
   border: none;
