--- a/app/assets/stylesheets/components/_card_professional.scss
+++ b/app/assets/stylesheets/components/_card_professional.scss
@@ -4,7 +4,7 @@
   background-color: white;
   margin: 8px;
   padding: 8px;
-  box-shadow: 4px 4px 2px rgb(239, 166, 144);
+  box-shadow: 4px 4px 2px rgba(239, 166, 144, 0.397);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 
 
