--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,33 +1,41 @@
 <div class="container-all">
-  <div class="banner">
-    <div class="row">
-      <div class="container text-end col">
-        <h1>Adopter avec amour,</h1>
-        <h1>Accompagner avec soin.</h1>
-        <%= link_to animals_path, class: "hoveredbutton btn btn-primary btn-spa text-white p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
-          <span class="icon-custom">🐾</span> Je veux adopter !
+  <div class="banner row d-flex justify-content-around align-items-center text-center">
+    <div class="text-center col" >
+      <h1>Adopter avec amour,</h1>
+      <h1>Accompagner avec soin.</h1>
+      <div class="d-flex flex-row justify-content-center">
+        <%= link_to animals_path, class: "hoveredbutton btn btn-primary btn-spa text-dark p-3 mt-4 text-end shadow me-4", style:"border-radius: 32px;" do%>
+          Je veux adopter !
+        <%end%>
+        <%= link_to pricings_path, class: "hoveredbutton btn btn-primary btn-spa text-dark p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
+          J'offre mon service !
         <%end%>
       </div>
-      <div class="col">
-        <div class="d-flex flex-row">
-          <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
-          </div>
-          <div class="card_banner m-4" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
-          </div>
-          <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
-          </div>
-
+    </div>
+    <div class="col">
+      <div class="d-flex flex-row">
+        <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+        </div>
+        <div class="card_banner mx-4" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+        </div>
+        <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
         </div>
       </div>
     </div>
   </div>
+  <%# search zone %>
   <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
     <div class="d-flex justify-content-center search-form-control form-group mb-3", style="width: 100%;" >
       <div class="d-flex align-items-center search-form-control form-group w-form">
         <%= text_field_tag :query,
               params[:query],
-              class: "form-control search-bar bg-secondary ps-5",
+              class: "form-control search-bar bg-secondary ps-5 w-75",
               placeholder: "Rechercher un service..."
+          %>
+        <%= text_field_tag :query,
+              params[:query],
+              class: "form-control search-bar bg-secondary ps-5 w-25",
+              placeholder: "Ville..."
           %>
         <div>
           <%= submit_tag "Rechercher", class: "btn_custom search-bar" %>
@@ -85,39 +93,43 @@
     </div>
   </div>
   <%# animals autoscroll %>
-  <div class="d-flex flex-row custom-scroll bg-primary" style="overflow-x: scroll; white-space: nowrap; margin: 0px !important;" data-controller="autoscroll" data-autoscroll-target="autoscrollContainer">
-    <h3 class="mt-5">Ils attendent un foyer...</h3>
-    <% @animals.each do |animal| %>
-      <a  href="<%=animal_path(animal)%>"
-          style="text-decoration: none; color: black; margin: 20px">
-        <div class="col">
-          <div  class="card_pro p-0 d-flex flex-column"
-                style="width: 300px; aspect-ratio: 1/1; overflow: hidden; margin: 0px !important;"
-                data-animal-index-target="animal"
-                data-action="mouseover->animal-index#hover mouseout->animal-index#unhover">
-            <!-- En-tête -->
-            <div class="p-3 text-center" style="border-radius: 8px 8px 0 0; background-color: #55868C;">
-              <%=animal.name %>
-            </div>
-            <!-- Image qui prend le reste de la place -->
-            <div class="flex-grow-1" style="overflow: hidden;">
-              <%= image_tag animal.photo, style: "width: 100%; height: 100%; object-fit: cover;" %>
+  <div class="d-flex flex-column justify-content-center align-items-center py-4 px-5 w-100 my-5" style="background: linear-gradient(#EFA690, #fdfcfa)" >
+    <h3 class="mt-3 text-center">Ils attendent un foyer...</h3>
+    <h5 class="m-2 mb-4 text-center">Offrez-leur une seconde chance, adoptez un ami pour la vie.</h5>
+    <div class="d-flex flex-row card_animal_container" data-controller="autoscroll" data-autoscroll-target="autoscrollContainer">
+      <% @animals.each do |animal| %>
+        <a  href="<%=animal_path(animal)%>"
+              style="text-decoration: none; color: black; margin: 20px">
+          <div class="col">
+            <div  class="card_animal_home_page p-0 d-flex flex-column"
+                    style="overflow: hidden; margin: 0px !important;"
+                    data-animal-index-target="animal"
+                    data-action="mouseover->animal-index#hover mouseout->animal-index#unhover">
+              <!-- En-tête -->
+              <div class="p-3 text-center" style="border-radius: 8px 8px 0 0; background-color:white;">
+                <%=animal.name %>
+              </div>
+              <!-- Image qui prend le reste de la place -->
+              <div class="flex-grow-1" style="overflow: hidden;">
+                <%= image_tag animal.photo, style: "width: 100%; height: 100%; object-fit: cover;" %>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
-    <% end %>
+        </a>
+      <% end %>
+    </div>
   </div>
   <%# pet alert %>
   <div class="row d-flex justify-content-center align-items-center m-2">
     <div class="card_pro p-4 col-lg-10 col-md-10 col-sm-10">
       <div class="text-center">
         <h3>Pet Alert !</h3>
+        <h5 class="m-2 mb-4">Un regard rapide peut sauver une vie : animaux perdus et retrouvés.</h5>
       </div>
       <div class="row d-flex align-items-center justify-content-around" >
         <%# alert image %>
         <div class="d-flex flex-column justify-content-center align-items-center col-lg-3 col-md-3 col-sm-7 p-3">
-          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pet_alert.jpg", alt:"alert", class:"alert_image m-4")%>
+          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pet_alert.png", alt:"pet alert", class:"alert_image m-4")%>
           <a href="<%=new_pet_alert_path%>" class="btn_custom"> Publier une annonce </a>
         </div>
         <%# carousel %>
@@ -176,5 +188,9 @@
         </h5>
       </div>
     </div>
+  </div>
+  <%# numbers %>
+  <div>
+
   </div>
 </div>
