toute la partie blogs sauf backend

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,10 +15,19 @@
     <div class="col">
       <div class="d-flex flex-row">
         <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+          <h2>🐶</h2>
+          <h4 class="my-4">Adoption responsable</h4>
+          <p>Aide les utilisateurs à adopter un animal avec amour et en toute responsabilité.</p>
         </div>
         <div class="card_banner mx-4" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+          <h2>🏥</h2>
+          <h4 class="my-4">Services pour animaux</h4>
+          <p>Facilite la prise de rendez-vous avec des professionnels locaux.</p>
         </div>
         <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+          <h2>📂</h2>
+          <h4 class="my-4">Carnet de santé numérique </h4>
+          <p>Permet aux propriétaires d’animaux d’accéder à tout moment aux informations médicales de leur compagnon.</p>
         </div>
       </div>
     </div>
@@ -129,7 +138,7 @@
       <div class="row d-flex align-items-center justify-content-around" >
         <%# alert image %>
         <div class="d-flex flex-column justify-content-center align-items-center col-lg-3 col-md-3 col-sm-7 p-3">
-          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pet_alert.png", alt:"pet alert", class:"alert_image m-4")%>
+          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Pet%20Alert.png", alt:"pet alert", class:"alert_image m-4")%>
           <a href="<%=new_pet_alert_path%>" class="btn_custom"> Publier une annonce </a>
         </div>
         <%# carousel %>
