--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item active">
           <h5>
-            <%= link_to "Blogs", pet_alerts_path, class: "nav-link mx-3" %>
+            <%= link_to "Blogs", blogs_path, class: "nav-link mx-3" %>
           </h5>
         </li>
         <% if user_signed_in? %>
