--- a/app/assets/stylesheets/components/_card_banner.scss
+++ b/app/assets/stylesheets/components/_card_banner.scss
@@ -1,11 +1,15 @@
 .card_banner {
-  width: 200px;
+  width: 250px;
   aspect-ratio: 0.7;
   border: 1px solid rgb(213, 204, 204);
   border-radius: 8px;
   margin: 8px;
-  padding: 8px;
+  padding: 20px;
   box-shadow: 4px 4px 2px rgba(239, 166, 144, 0.397);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card_banner:hover {
