--- a/app/views/professionals/_available_slots.html.erb
+++ b/app/views/professionals/_available_slots.html.erb
@@ -1,48 +1,32 @@
 <div class="m-2">
-  <div class="text-center"><h4>Prochains rendez-vous disponibles</h4></div>
-  <% count = 0 %>
+  <div class="text-center">
+    <h4>Prochains rendez-vous disponibles</h4>
+  </div>
   <% i = 0 %>
-  <% dates_count = @availabilities.pluck(:start_time).map { |date| date.to_date }.uniq.count %>
-  <% available_slots = [] %>
-  <% number_show_dates = dates_count > 8 ? 8 : dates_count %>
-  <% while count < number_show_dates do  %>
-    <% date = (DateTime.current.to_date + i).strftime('%d-%m-%Y')%>
-    <% professional_closed_day = professional.opening_hours.where(closed: true).pluck(:day_of_week)%>
-    <% availabilities = Availability.where("DATE(start_time) = ? AND professional_id = ? AND status = ?", Date.parse(date), professional.id, true)%>
-    <% if (!professional_closed_day.include?( Date.parse(date).wday)) && (!availabilities.empty? && availabilities.last.start_time > Time.now) %>
-      <div class="nav-item dropdown" data-controller="appointment-selected", data-appointment-selected-api-key-value="<%=professional.id%>">
-        <%# date button %>
+  <% days_displayed = 0 %> <!-- Variable pour compter les jours affichés -->
+  <% while days_displayed < 7 %>
+    <% date = DateTime.current.to_date + i %>
+    <% if isOpened?(professional, date) %>
+      <div class="nav-item dropdown" data-controller="appointment-selected" data-appointment-selected-api-key-value="<%= professional.id %>">
         <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
-          <%# get all the appointments for this professional %>
-          <%= date %>
-          <% @appointments = Appointment.where(professional: professional, start_time: Time.parse(date))%>
-          <% @appointment_times = [] %>
-          <% @appointments.each do |appointment| %>
-            <% @appointment_times << appointment.start_time.strftime("%H:%M") %>
-          <% end%>
+          <%= date.strftime('%d-%m-%Y') %>
         </a>
-        <%# show all availabilities for appointment %>
-        <div  class="d-none d-flex justify-content-center mx-2"
-            data-appointment-selected-target="times"
-            style="display: flex; flex-wrap: wrap;">
-          <% availabilities.each do |availability| %>
-            <% available_slots << availability%>
-            <a href="<%=new_professional_appointment_path(professional)%>"
-              class="btn btn-outline-primary m-1
-                    <%= 'd-none' if (@appointment_times.include?(availability.start_time.to_time) && @appointments.count==professional.capacity) || (Date.parse(date) == Date.today && availability.start_time.to_time < Time.now.strftime('%H:%M')) %>"
-              style="width: 22%;"
-              data-time="<%= availability.start_time.to_time %>"
-              data-action="click->appointment-selected#confirm">
-              <%= availability.start_time.strftime("%H:%M") %>
+        <div class="d-none d-flex justify-content-center mx-2"
+             data-appointment-selected-target="times"
+             style="display: flex; flex-wrap: wrap;">
+          <% availabilitiesOfTheDay(professional, date).each do |a| %>
+            <a href="<%= new_professional_appointment_path(professional) %>"
+               class="btn btn-outline-primary m-1"
+               style="width: 22%;"
+               data-time="<%= a.to_time %>"
+               data-action="click->appointment-selected#confirm">
+              <%= a.strftime("%H:%M") %>
             </a>
           <% end %>
-        </div>
-      </div>
-      <% count += 1%>
+        </div> <!-- Fermeture du div times -->
+      </div> <!-- Fermeture du div nav-item dropdown -->
+      <% days_displayed += 1 %> <!-- Incrémentation du nombre de jours affichés -->
     <% end %>
-    <% i += 1 %>
+    <% i += 1 %> <!-- On continue d'incrémenter i pour passer au jour suivant -->
   <% end %>
-   <% if available_slots.empty? %>
-      <p class="my-2" style="font-style: oblique; font-size: 12px;">Pas de créneaux disponibles pour ce professionnel dans les prochains 7 jours ouvrés.</p>
-  <% end %>
-</div>
+</div> <!-- Fermeture du div principal m-2 -->
