dans le show de pro c'est ok

--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -50,7 +50,7 @@
                   <p class="text-start mx-2 mt-2" style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%= professional.description.slice(0,200) %>...</p>
                 </a>
               </div>
-              <%= render "available_slots", professional: professional %>
+              <%= render "index_slots", professional: professional %>
             </div>
           </div>
         <%end%>
