--- a/app/views/professionals/pro_show.html.erb
+++ b/app/views/professionals/pro_show.html.erb
@@ -35,7 +35,7 @@
           </a>
         </div>
         <%= turbo_frame_tag :all_slot do %>
-          <%= render "all_slot", professional: @professional, selected_date: @selected_date %>
+          <%= render "all_slots", professional: @professional, selected_date: @selected_date %>
         <% end %>
       </div>
       <%# appointment details %>
