--- a/app/assets/stylesheets/components/_card_professional.scss
+++ b/app/assets/stylesheets/components/_card_professional.scss
@@ -45,3 +45,25 @@
   transform: scale(1.05); /* Agrandissement à 105% */
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); /* Optionnel : ajoute une ombre */
 }
+
+
+.date-picker-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f8f9fa;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 0;
+}
+
+.date-picker-container:hover {
+  background: #e9ecef;
+}
+
+.hidden-input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
