--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -58,8 +58,53 @@
         <h4 class="my-2">Description : </h4>
         <p style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%=@professional.description%></p>
       </div>
-      <div id="available-pro" class="card_pro">
-        <%= render "all_available_slots", professional: @professional%>
+      <%# avis %>
+      <div class="card_pro" data-controller="alert">
+        <div class="d-flex flex-row justify-content-between">
+          <h4>Les avis : </h4>
+          <div class="d-flex flex-row align-items-center">
+            <% @professional.rating.times do %>
+              <i class="fas fa-star text-warning m-0"></i>
+            <% end %>
+            <% (5 - @professional.rating).times do %>
+              <i class="fas fa-star text-muted m-0"></i>
+            <% end %>
+            <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+          </div>
+        </div>
+        <%# list of reviews %>
+        <div class="mt-2 d-flex flex-column justify-content-center align-items-center" id="reviews-container">
+          <% if @reviews.empty? %>
+            <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+              <p class="text-center">Soyez le premier à mettre un avis !</p>
+              <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/customer-feedback.png"
+                style="height: 100px">
+            </div>
+          <% else %>
+            <% @reviews.each do |review| %>
+              <div class="border-bottom mt-2" style="width: 100%;">
+                <div class="d-flex flex-row justify-content-between">
+                  <p><%= review.user.first_name%> <%= review.user.last_name%></p>
+                  <p><%= review.rating %> / 5</p>
+                </div>
+                <p><%= review.content %></p>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="d-flex justify-content-center mt-3">
+          <% if user_signed_in? %>
+            <%= link_to "Ajouter un avis",
+                          "#",
+                          class: "btn_custom mt-3 active text-center",
+                          data: { controller: "alert", action: "click->alert#reviewSweetalert", professional_id: @professional.id } %>
+          <% else %>
+            <%= link_to "Ajouter un avis",
+                          new_user_session_path,
+                          class: "btn_custom mt-3",
+                          data: { controller: "alert", action: "click->alert#notConnectedSweetalert"}%>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
@@ -70,53 +115,23 @@
           data-map-markers-value="<%= @marker.to_json %>"
           data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
-    <%# avis %>
-    <div class="card_pro" data-controller="alert">
-      <div class="d-flex flex-row justify-content-between">
-        <h4>Les avis : </h4>
-        <div class="d-flex flex-row align-items-center">
-          <% @professional.rating.times do %>
-            <i class="fas fa-star text-warning m-0"></i>
-          <% end %>
-          <% (5 - @professional.rating).times do %>
-            <i class="fas fa-star text-muted m-0"></i>
-          <% end %>
-          <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+    <%# appointment %>
+    <div id="available-pro" class="card_pro" data-controller="appointment-selected-show" data-appointment-selected-show-api-key-value="<%= @professional.id %>">
+      <h3 class="text-center my-3">Prendre un rendez-vous</h3>
+      <!-- Sélection de la date (rendu cliquable) -->
+      <div class="d-flex flex-row justify-content-center align-items-center">
+        <div>
+          Date :
+        </div>
+        <div class="date-picker-container" style="width: 90%" data-action="click->appointment-selected-show#openPicker">
+          <input type="text" data-appointment-selected-show-target="selectedDate">
         </div>
       </div>
-      <%# list of reviews %>
-      <div class="mt-2 d-flex flex-column justify-content-center align-items-center" id="reviews-container">
-        <% if @reviews.empty? %>
-          <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
-            <p class="text-center">Soyez le premier à mettre un avis !</p>
-            <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/customer-feedback.png"
-                style="height: 100px">
-          </div>
-        <% else %>
-          <% @reviews.each do |review| %>
-            <div class="border-bottom mt-2" style="width: 100%;">
-              <div class="d-flex flex-row justify-content-between">
-                <p><%= review.user.first_name%> <%= review.user.last_name%></p>
-                <p><%= review.rating %> / 5</p>
-              </div>
-              <p><%= review.content %></p>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="d-flex justify-content-center mt-3">
-        <% if user_signed_in? %>
-          <%= link_to "Ajouter un avis",
-                          "#",
-                          class: "btn_custom mt-3 active text-center",
-                          data: { controller: "alert", action: "click->alert#reviewSweetalert", professional_id: @professional.id } %>
-        <% else %>
-          <%= link_to "Ajouter un avis",
-                          new_user_session_path,
-                          class: "btn_custom mt-3",
-                          data: { controller: "alert", action: "click->alert#notConnectedSweetalert"}%>
-        <% end %>
-      </div>
+      <!-- Affichage des créneaux horaires -->
+      <%= turbo_frame_tag :show_slots, data: { appointment_selected_show_target: @selected_date } do %>
+        <%= render partial: "show_slots", locals: { professional: @professional, selected_date: @selected_date.to_date }
+%>
+      <% end %>
     </div>
   </div>
 </div>
